// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/IconSwitch example - used in ContentSwitcher 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--content-switcher iot--content-switcher--icon"
      onChange={[Function]}
      role="tablist"
    >
      <button
        className="iot--icon-switch iot--icon-switch--default bx--btn bx--btn--secondary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="bx--assistive-text"
        >
          Graphical View
        </span>
        <svg
          aria-hidden="true"
          aria-label="Graphical View"
          className="bx--btn__icon"
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 32 32"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="2"
            width="18"
            x="10"
            y="6"
          />
          <rect
            height="2"
            width="18"
            x="10"
            y="24"
          />
          <rect
            height="2"
            width="18"
            x="10"
            y="15"
          />
          <rect
            height="2"
            width="2"
            x="4"
            y="15"
          />
          <rect
            height="2"
            width="2"
            x="4"
            y="6"
          />
          <rect
            height="2"
            width="2"
            x="4"
            y="24"
          />
        </svg>
      </button>
      <button
        className="iot--icon-switch iot--icon-switch--default iot--icon-switch--unselected bx--btn bx--btn--secondary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="bx--assistive-text"
        >
          Source View
        </span>
        <svg
          aria-hidden="true"
          aria-label="Source View"
          className="bx--btn__icon"
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 32 32"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="31 16 24 23 22.59 21.59 28.17 16 22.59 10.41 24 9 31 16"
          />
          <polygon
            points="1 16 8 9 9.41 10.41 3.83 16 9.41 21.59 8 23 1 16"
          />
          <rect
            height="2"
            transform="rotate(-75 15.996 16)"
            width="20.17"
            x="5.91"
            y="15"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/IconSwitch selected 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="iot--icon-switch iot--icon-switch--default bx--btn bx--btn--secondary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="bx--assistive-text"
      >
        Graphical View
      </span>
      <svg
        aria-hidden="true"
        aria-label="Graphical View"
        className="bx--btn__icon"
        focusable="false"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        viewBox="0 0 32 32"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="2"
          width="18"
          x="10"
          y="6"
        />
        <rect
          height="2"
          width="18"
          x="10"
          y="24"
        />
        <rect
          height="2"
          width="18"
          x="10"
          y="15"
        />
        <rect
          height="2"
          width="2"
          x="4"
          y="15"
        />
        <rect
          height="2"
          width="2"
          x="4"
          y="6"
        />
        <rect
          height="2"
          width="2"
          x="4"
          y="24"
        />
      </svg>
    </button>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/IconSwitch unselected 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="iot--icon-switch iot--icon-switch--default iot--icon-switch--unselected bx--btn bx--btn--secondary bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--tooltip--top"
      disabled={false}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="bx--assistive-text"
      >
        Graphical View
      </span>
      <svg
        aria-hidden="true"
        aria-label="Graphical View"
        className="bx--btn__icon"
        focusable="false"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        role="img"
        viewBox="0 0 32 32"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="2"
          width="18"
          x="10"
          y="6"
        />
        <rect
          height="2"
          width="18"
          x="10"
          y="24"
        />
        <rect
          height="2"
          width="18"
          x="10"
          y="15"
        />
        <rect
          height="2"
          width="2"
          x="4"
          y="15"
        />
        <rect
          height="2"
          width="2"
          x="4"
          y="6"
        />
        <rect
          height="2"
          width="2"
          x="4"
          y="24"
        />
      </svg>
    </button>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
